project 2 complete ready for submission :wolf:

--- a/styles/sass/_colors.scss
+++ b/styles/sass/_colors.scss
@@ -1,4 +1,4 @@
-// COLORS 
+// COLORS STYLE PAGE
 // sunflower yellow --> color: #FFD300; rgb(255,211,0);
 // white            --> color: white;
 // almost black     --> color: #171B0E; rgb(23, 27, 14);
